# editor-support

./: .gitmodules  Cargo.toml
lfanalysis/: Cargo.toml
lfanalysis-wasm/: Cargo.toml
lfanalysis-wasm/src/: lib.rs
lfanalysis-wasm/wasmtest/: package.json  pnpm-lock.yaml
lfanalysis-wasm/wasmtest/test/: test.ts
lfanalysis/src/: ast.rs  lib.rs
lfbuildconfig/: Cargo.toml
lfbuildconfig/src/: lib.rs
lfdeploy/: Cargo.toml
lfdeploy/src/: lib.rs
lfwasm/: Cargo.toml  Makefile  run_wasm_pack.sh
lfwasm/src/: interface_types.rs  lib.rs
lfwasm/wasmtest/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
lfwasm/wasmtest/lf/: Lingo.toml
lfwasm/wasmtest/lf/src/: minimal.lf
lfwasm/wasmtest/test/: test.ts
