[package]
name = "lfdeploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lfanalysis = { version = "0.1.0", path = "../lfanalysis" }
lfbuildconfig = { version = "0.1.0", path = "../lfbuildconfig" }
