[package]
name = "lfwasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
lfanalysis = { version = "0.1.0", path = "../lfanalysis" }
lfbuildconfig = { version = "0.1.0", path = "../lfbuildconfig" }
lfdeploy = { version = "0.1.0", path = "../lfdeploy" }
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.68"
